--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -27,5 +28,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "msw": "^1.2.1",
     "vite": "^4.3.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
